--- a/src/app/main.html
+++ b/src/app/main.html
@@ -1,5 +1,7 @@
 <div class="main-container">
   <main class="main">
-    <table-component></table-component>
+    <!-- <table-component></table-component> -->
+    <ng-outlet></ng-outlet>
+    <!-- <list-component></list-component> -->
   </main>
 </div>
